aligned text in navbar and fixed z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ h1, h2 {
 .app-container {
   background: linear-gradient(to right, #2D0083, #2BA5FF);
   position: absolute;
-  padding: 20px 0px;
   min-height: 100%;
   min-width: 100%;
   text-align: center;
@@ -38,6 +37,8 @@ h1, h2 {
   width: 100%;
   font-size: .75em;
   font-weight: 200;
+  padding: 15px 0px;
+  z-index: 1000;
 }
 
 .navbar a {
@@ -57,12 +58,13 @@ h1, h2 {
 
 .nav-link {
   display: inline-block;
-  padding: 5px 7px;
+  padding: 5px 0px;
   margin: 0px 5px;
   border-radius: 3px;
 }
 
 .outline {
+  padding: 5px 7px;
   border: 1px solid white;
 }
 
@@ -113,6 +115,7 @@ h1, h2 {
   color: white;
   font-size: 1em;
   font-weight: 200;
+  letter-spacing: 1px;
   margin-bottom: 20px;
 }
 
@@ -138,6 +141,9 @@ h1, h2 {
  }
 
  .center {
+   position: absolute;
+   width: 100%;
+   height: 100%;
    align-items: center;
  }
 
